<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DishesActivity"
    tools:showIn="@layout/activity_dishes">

    <ImageView
        android:id="@+id/imageViewDishes"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="false"
        android:src="@drawable/dishes"
        android:contentDescription="@string/text3" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="50sp"
        android:text="@string/text3"
        android:layout_toEndOf="@id/imageViewDishes" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/imageViewDishes"
        android:layout_marginStart="50dp"
        android:theme="@android:style/Animation" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:textAlignment="center"
            android:textSize="25sp"
            android:background="@android:drawable/alert_light_frame" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/frameLayout"
        android:layout_below="@id/imageViewDishes"
        android:textSize="35sp"
        android:text="@string/days_passed"/>

    <ImageView
        android:id="@+id/drying_dishes"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/frameLayout"
        android:layout_toEndOf="@id/imageViewDishes"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="false"
        android:src="@drawable/dishes_drying"
        android:contentDescription="@string/drying_dishes" />

    <TextView
        android:id="@+id/drying_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout"
        android:layout_toEndOf="@id/drying_dishes"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:textSize="45sp"
        android:text="@string/checkmark"
        android:visibility="invisible"/>

</RelativeLayout>